--- a/client/index.html
+++ b/client/index.html
@@ -34,8 +34,10 @@
       <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
     </nav>
   </header>
-  <main id="app">
-    <div class="container-fluid">
+
+  <main>
+    <!-- SECTION commented out the Auth0 info stuff -->
+    <!-- <div class="container-fluid">
       <div class="row my-3">
         <div class="col-lg-5" id="auth-settings">
           <div class="card p-2 skeleton-loader">
@@ -53,9 +55,47 @@
           </div>
         </div>
       </div>
+    </div> -->
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-8 my-2">
+            <div class="row mycard">
+              <div class="col-5"> picture</div>
+              <div class="col-7">info</div>
+            </div>
+          </div>
+          <div class="col-8 my-2">
+            <div class="row mycard">
+              <div class="col-5"> picture</div>
+              <div class="col-7">info</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6 m-auto">
+          <div class="card text-start">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3 img-fluid">
+                  <img class="albumCover" src="https://thiscatdoesnotexist.com" alt="">
+                </div>
+                <div class="col-9">
+                  <h4 class="card-title">Song Title</h4>
+                  <p class="card-text">Listen to this song when you're feeling like a true code monkey</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
+
   <footer class="container-fluid bg-dark text-light">
     <div class="row text-center">
       <div class="col">
