--- a/client/index.html
+++ b/client/index.html
@@ -77,18 +77,14 @@
           <div class="row mycard">
             <div class="col-5">
               <div class="img-fluid d-flex align-items-center">
-                <img class="albumCover" src="https://thiscatdoesnotexist.com" alt="picture">
+                <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
               </div>
             </div>
             <div class="col-7">
-              <p class="">Listen to this song when you're feeling like a true code monkey</p>
+              <div class="d-flex">
+                <h6>Listen to this when you coding</h6>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-8 my-2">
-          <div class="row mycard">
-            <div class="col-5"> picture</div>
-            <div class="col-7">info</div>
           </div>
         </div>
       </div>
@@ -102,7 +98,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-3 img-fluid">
-                  <img class="albumCover" src="https://thiscatdoesnotexist.com" alt="picture">
+                  <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
                 </div>
                 <div class="col-9">
                   <h4 class="card-title">Song Title</h4>
