--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,8 @@
               </div>
             </div>
             <div class="col-7">
-              <div class="d-flex">
+              <div class="">
+                <h5>Song Title</h5>
                 <h6>Listen to this when you coding</h6>
               </div>
             </div>
