--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css"
     integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Roboto:wght@700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="assets/style/main.css">
   <title>HACKATHON</title>
   <style>
@@ -32,10 +37,10 @@
 </head>
 
 <body class="debug mybackground">
-  <header>
+  <header class="">
     <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
       <a class="navbar-brand" href="#">
-        <span class="mx-3 text-center">Mood Music</span>
+        <h1 class="mx-3 headerfont text-center">Mood Music</h1>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
