--- a/client/index.html
+++ b/client/index.html
@@ -76,13 +76,16 @@
         </div>
       </div>
     </div> -->
+
+    <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
       <div class="row justify-content-center">
+        <!-- NOTE this is the official template -->
         <div class="col-8 my-2">
           <div class="row mycard">
             <div class="col-5">
               <div class="img-fluid d-flex align-items-center">
-                <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
+                <img class="incard" src="https://thismountaindoesnotexist.com" alt="picture">
               </div>
             </div>
             <div class="col-7">
@@ -96,8 +99,8 @@
       </div>
     </div>
 
-
-    <div class="container-fluid">
+    <!-- NOTE test template -->
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-6 m-auto">
           <div class="card text-start">
@@ -115,7 +118,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </main>
 
