template and id added to html

--- a/client/index.html
+++ b/client/index.html
@@ -80,21 +80,26 @@
     <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <!-- NOTE this is the official template -->
-        <div class="col-8 my-2">
-          <div class="row mycard">
-            <div class="col-5">
-              <div class="img-fluid d-flex align-items-center">
-                <img class="incard" src="https://thismountaindoesnotexist.com" alt="picture">
+        <div id="vinyls">
+
+          <!-- NOTE this is the official template -->
+          <div class="col-8 my-2">
+            <div class="row mycard">
+              <div class="col-5">
+                <div class="img-fluid d-flex align-items-center">
+                  <img class="incard" src="https://thismountaindoesnotexist.com" alt="picture">
+                </div>
               </div>
-            </div>
-            <div class="col-7">
-              <div class="">
-                <h5>Song Title</h5>
-                <h6>Listen to this when you coding</h6>
+              <div class="col-7">
+                <div class="">
+                  <h5>Song Title</h5>
+                  <h6>Listen to this when you coding</h6>
+                </div>
               </div>
             </div>
           </div>
+
+
         </div>
       </div>
     </div>
