--- a/client/index.html
+++ b/client/index.html
@@ -79,8 +79,8 @@
 
     <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div id="vinyls">
+      <div class="row justify-content-center" id="vinyls">
+        <div id="">
 
           <!-- NOTE this is the official template -->
           <div class="col-8 my-2">
