--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
 
 <body class="debug mybackground">
   <header class="">
-    <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
+    <nav class="navbar navbar-dark navbar-expand headercolor text-light">
       <a class="navbar-brand" href="#">
         <h1 class="mx-3 headerfont text-center">Mood Music</h1>
       </a>
@@ -127,10 +127,10 @@
 
   </main>
 
-  <footer class="container-fluid bg-dark text-light">
+  <footer class="container-fluid headercolor text-light">
     <div class="row text-center">
       <div class="col">
-        <p><small>Made with 💖 by CodeWorks</small></p>
+        <p><small>mood music</small></p>
       </div>
     </div>
   </footer>
