--- a/client/index.html
+++ b/client/index.html
@@ -80,27 +80,28 @@
     <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
       <div class="row justify-content-center" id="vinyls">
-        <div id="">
 
-          <!-- NOTE this is the official template -->
-          <div class="col-8 my-2">
-            <div class="row mycard">
-              <div class="col-5">
-                <div class="img-fluid d-flex align-items-center">
-                  <img class="incard" src="https://thismountaindoesnotexist.com" alt="picture">
-                </div>
+
+        <!-- NOTE this is the official template -->
+        <div class="col-9 my-2">
+          <div class="row mycard">
+            <div class="col-5 p-0">
+              <div class="img-fluid">
+                <img class="albumCover" src="https://upload.wikimedia.org/wikipedia/en/a/a7/Random_Access_Memories.jpg"
+                  alt="picture">
               </div>
-              <div class="col-7">
-                <div class="">
-                  <h5>Song Title</h5>
-                  <h6>Listen to this when you coding</h6>
-                </div>
+            </div>
+            <div class="col-7">
+              <div class="">
+                <h5>Song Title</h5>
+                <h6>Listen to this when you coding</h6>
               </div>
             </div>
           </div>
-
-
         </div>
+
+
+
       </div>
     </div>
 
