--- a/client/index.html
+++ b/client/index.html
@@ -79,16 +79,16 @@
 
     <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
-      <div class="row justify-content-center" id="vinyls">
+      <div class="row justify-content-center justify-content-md-evenly" id="vinyls">
 
 
         <!-- NOTE this is the official template -->
-        <div class="col-9 my-2">
+        <div class="col-9 col-md-5 my-2">
           <div class="row mycard">
             <div class="col-5 p-0">
               <div class="img-fluid">
-                <img class="albumCover" src="https://upload.wikimedia.org/wikipedia/en/a/a7/Random_Access_Memories.jpg"
-                  alt="picture">
+                <img class="albumCover smallalbumCover"
+                  src="https://upload.wikimedia.org/wikipedia/en/a/a7/Random_Access_Memories.jpg" alt="picture">
               </div>
             </div>
             <div class="col-7">
