--- a/client/index.html
+++ b/client/index.html
@@ -80,8 +80,6 @@
     <!-- NOTE this is were columns start populating under -->
     <div class="container-fluid">
       <div class="row justify-content-center justify-content-md-evenly" id="vinyls">
-
-
         <!-- NOTE this is the official template -->
         <div class="col-9 col-md-5 my-2">
           <div class="row mycard">
@@ -99,9 +97,67 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-8 m-auto">
+          <form>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label>Song Title</label>
+                  <input type="title" class="form-control" id="title" placeholder="Song Title">
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label>Song Title</label>
+                  <input type="title" class="form-control" id="title" placeholder="Song Title">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label>Song Title</label>
+                  <input type="title" class="form-control" id="title" placeholder="Song Title">
+                </div>
 
 
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="mood">Mood</label>
+                  <select class="form-control" id="mood">
+                    <option>Happy</option>
+                    <option>Sad</option>
+                    <option>Angry</option>
+                    <option>Melancholy</option>
+                    <option>Trippy</option>
+                    <option>Sullen</option>
+                    <option>Ambient</option>
+                    <option>Depressed</option>
+                    <option>Joyful</option>
+                    <option>Excited</option>
+                    <option>Hype</option>
+                    <option>Euphoric</option>
+                    <option>Drunk</option>
+                  </select>
+                </div>
 
+
+              </div>
+            </div>
+
+
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">When should you listen to this song?</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
