offcanvas is almost done

--- a/client/index.html
+++ b/client/index.html
@@ -100,9 +100,43 @@
       </div>
     </div>
 
+
+
+    <!-- NOTE test template -->
+    <!-- <div class="container-fluid">
+      <div class="row">
+        <div class="col-6 m-auto">
+          <div class="card text-start">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3 img-fluid">
+                  <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
+                </div>
+                <div class="col-9">
+                  <h4 class="card-title">Song Title</h4>
+                  <p class="card-text">Listen to this song when you're feeling like a true code monkey</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+  </main>
+
+  <footer class="container-fluid headercolor ">
+    <div class="row text-center ">
+      <button class="btn headercolor" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
+        aria-controls="offcanvasBottom"><i class=" text-light mdi mdi-chevron-up"></i></button>
+    </div>
+  </footer>
+
+
+  <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-8 m-auto">
+        <div class="col-md-8 col-11 m-auto">
           <form>
             <div class="row">
               <div class="col-6">
@@ -161,36 +195,8 @@
       </div>
     </div>
 
-    <!-- NOTE test template -->
-    <!-- <div class="container-fluid">
-      <div class="row">
-        <div class="col-6 m-auto">
-          <div class="card text-start">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-3 img-fluid">
-                  <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
-                </div>
-                <div class="col-9">
-                  <h4 class="card-title">Song Title</h4>
-                  <p class="card-text">Listen to this song when you're feeling like a true code monkey</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
-  </main>
-
-  <footer class="container-fluid headercolor text-light">
-    <div class="row text-center">
-      <div class="col">
-        <p><small>mood music</small></p>
-      </div>
-    </div>
-  </footer>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/1.22/auth0-spa-js.production.js"></script>
