--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 
-<body class="debug mybackground">
+<body class="debu mybackground">
   <header class="">
     <nav class="navbar navbar-dark navbar-expand headercolor text-light">
       <a class="navbar-brand" href="#">
@@ -133,7 +133,8 @@
   </footer>
 
 
-  <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+  <div class="offcanvas offcanvas-bottom headercolor text-light" tabindex="-1" id="offcanvasBottom"
+    aria-labelledby="offcanvasBottomLabel">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-11 m-auto">
@@ -158,8 +159,6 @@
                   <label>Song Title</label>
                   <input type="title" class="form-control" id="title" placeholder="Song Title">
                 </div>
-
-
               </div>
               <div class="col-6">
                 <div class="form-group">
