--- a/client/index.html
+++ b/client/index.html
@@ -136,7 +136,7 @@
   <div class="offcanvas offcanvas-bottom headercolor text-light" tabindex="-1" id="offcanvasBottom"
     aria-labelledby="offcanvasBottomLabel">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row my-2">
         <div class="col-md-8 col-11 m-auto">
           <form>
             <div class="row">
@@ -148,8 +148,8 @@
               </div>
               <div class="col-6">
                 <div class="form-group">
-                  <label>Song Title</label>
-                  <input type="title" class="form-control" id="title" placeholder="Song Title">
+                  <label>Album Cover URL</label>
+                  <input type="albumCover" class="form-control" id="albumCover" placeholder="Album Cover URL">
                 </div>
               </div>
             </div>
