--- a/client/index.html
+++ b/client/index.html
@@ -148,16 +148,16 @@
               </div>
               <div class="col-6">
                 <div class="form-group">
-                  <label>Album Cover URL</label>
-                  <input type="albumCover" class="form-control" id="albumCover" placeholder="Album Cover URL">
+                  <label>Artist</label>
+                  <input type="artist" class="form-control" id="artist" placeholder="Artist">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6">
                 <div class="form-group">
-                  <label>Song Title</label>
-                  <input type="title" class="form-control" id="title" placeholder="Song Title">
+                  <label>Album Cover URL</label>
+                  <input type="albumCover" class="form-control" id="albumCover" placeholder="Album Cover URL">
                 </div>
               </div>
               <div class="col-6">
