--- a/client/index.html
+++ b/client/index.html
@@ -36,13 +36,13 @@
   </style>
 </head>
 
-<body class="debu mybackground">
+<body class="debug mybackground">
   <header class="">
     <nav class="navbar navbar-dark navbar-expand headercolor text-light">
       <a class="navbar-brand" href="#">
         <h1 class="mx-3 headerfont text-center">Mood Music</h1>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
