--- a/client/index.html
+++ b/client/index.html
@@ -136,8 +136,8 @@
   <div class="offcanvas offcanvas-bottom headercolor text-light" tabindex="-1" id="offcanvasBottom"
     aria-labelledby="offcanvasBottomLabel">
     <div class="container-fluid">
-      <div class="row my-2">
-        <div class="col-md-8 col-11 m-auto">
+      <div class="row my-2 justify-content-center">
+        <div class="col-md-8 col-11 ">
           <form>
             <div class="row">
               <div class="col-6">
@@ -185,12 +185,20 @@
             </div>
 
 
+
             <div class="form-group">
               <label for="exampleFormControlTextarea1">When should you listen to this song?</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <div class="row my-2">
+              <div class="col-6">
+                <button class="btn btn-primary">submit</button>
+              </div>
+            </div>
           </form>
         </div>
+
+
       </div>
     </div>
 
