--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,9 @@
   <header class="">
     <nav class="navbar navbar-dark navbar-expand headercolor text-light">
       <a class="navbar-brand" href="#">
-        <h1 class="mx-3 headerfont text-center">Mood Music</h1>
+        <h1 class="mx-3 headerfont text-center"> <img src="./assets/img/musiclogotwo.png" alt="logo" class="logosize">
+          Mood
+          Music</h1>
       </a>
       <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +103,7 @@
     </div>
 
 
-    
+
 
 
 
