--- a/client/index.html
+++ b/client/index.html
@@ -130,7 +130,7 @@
 
   </main>
 
-  <footer class="container-fluid headercolor ">
+  <footer class="container-fluid headercolor sticky-bottom ">
     <div class="row text-center ">
       <button class="btn headercolor" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
         aria-controls="offcanvasBottom" onclick="app.vinylsController.getVinylForm()"><i
