working on modal content

--- a/client/index.html
+++ b/client/index.html
@@ -101,38 +101,13 @@
     </div>
 
 
-    
-
-
-
-    <!-- NOTE test template -->
-    <!-- <div class="container-fluid">
-      <div class="row">
-        <div class="col-6 m-auto">
-          <div class="card text-start">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-3 img-fluid">
-                  <img class="incard" src="https://thiscatdoesnotexist.com" alt="picture">
-                </div>
-                <div class="col-9">
-                  <h4 class="card-title">Song Title</h4>
-                  <p class="card-text">Listen to this song when you're feeling like a true code monkey</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
   </main>
 
   <footer class="container-fluid headercolor ">
     <div class="row text-center ">
       <button class="btn headercolor" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
         aria-controls="offcanvasBottom" onclick="app.vinylsController.getVinylForm()"><i
-          class=" text-light mdi mdi-chevron-up"></i></button>
+          class=" text-light mdi mdi-chevron-up fs-1"></i></button>
     </div>
   </footer>
 
@@ -140,8 +115,8 @@
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content modalcolor">
-        <div class="modal-body">
+      <div class="modal-content modalcolor" id="modalContent">
+        <!-- <div class="modal-body">
           <div class="container-fluid">
 
             <div class="row justify-content-center">
@@ -163,7 +138,7 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Edit</button>
           <button type="button" class="btn btn-danger">Delete</button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
