--- a/client/index.html
+++ b/client/index.html
@@ -141,7 +141,7 @@
   <!-- NOTE MODAL Template -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content modalcolor" id="modalContent">
         <!-- <div class="modal-body">
           <div class="container-fluid">
